updated sage.yaml file

--- a/sage.yaml
+++ b/sage.yaml
@@ -1,5 +1,5 @@
 name: "visual_disorder_plugin"
-description: "Numpy example which computes some stats of a test frame."
+description: "simple plugin"
 version: "0.1.0"
 source:
   architectures:
@@ -7,3 +7,4 @@ source:
     - "linux/arm64"
     - "linux/arm/v7"
   url: "https://github.com/Samaah330/visual_disorder_plugin"
+  branch: "master"
